--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "CHANGE_ME_PACKAGE_NAME",
   "version": "0.0.0",
-  "description": "",
+  "description": "Base template for Node JS projects.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./",
-    "precommit": "lint-staged",
     "lint:fix": "eslint ./ --fix",
-    "prettier": "prettier \"**/*.{js,jsx,css,json}\"",
-    "prettier:fix": "prettier \"**/*.{js,jsx,css,json}\" --write",
+    "prettier": "prettier \"**/*.{js,jsx,css}\"",
+    "precommit": "lint-staged",
     "format": "npm run prettier -- --write",
-    "validate": "npm run prettier -- --list-different && npm run lint",
     "release": "standard-version -t ''",
     "release:major": "npm run release -- --release-as major",
     "release:minor": "npm run release -- --release-as minor",
-    "release:patch": "npm run release -- --release-as patch",
-    "unpublish": "npx force-unpublish CHANGE_ME_PACKAGE_NAME 'npmrc remove module'"
+    "release:patch": "npm run release -- --release-as patch"
   },
   "husky": {
     "hooks": {
@@ -24,23 +21,20 @@
       "pre-commit": "npm run lint"
     }
   },
-  "author": "",
-  "license": "ISC",
+  "author": "warlock.gpl@gmail.com",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "@commitlint/config-conventional": "8.3.4",
     "babel-eslint": "10.1.0",
     "commitlint": "8.3.5",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.1.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
+    "eslint": "7.0.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.3",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "npx": "10.2.2",
     "prettier": "2.0.1",
     "standard-version": "7.1.0"
   }
