--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "author": "warlock.gpl@gmail.com",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "4.17.19"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "8.3.4",
     "babel-eslint": "10.1.0",
